@@ -19,7 +19,7 @@
 		<setting id="divflavors.menu" type="labelenum" subsetting="true" label="40429" values="Sub|Dub|Both" default="Sub" visible="eq(-1,true)"/>
 		<setting id="sep"/>
 		<setting id="contentformat.bool" label="40391" type="bool" default="false"/>
-		<setting id="contentformat.menu" type="enum" subsetting="true" label="40392" lvalues="40393|40394|40395|40396|40397|40398|40399" default="40393" visible="eq(-1,true)"/>
+		<setting id="contentformat.menu" type="enum" subsetting="true" label="40392" lvalues="40393|40394|40395|40396|40397|40398|40399" default="0" visible="eq(-1,true)"/>
 		<setting id="sep"/>
 		<setting id="licensedBy.bool" label="40472" type="bool" default="false"/>
 		<setting id="licensedBy.menu" type="labelenum" subsetting="true" label="40473" values="Crunchyroll|Hulu|Funimation|Netflix|YouTube|HIDIVE|Amazon|Vimeo|VRV|HBO Max|Wakanim|RetroCrush|Adult Swim|Japanese Film Archives|Tubi TV|Crackle|AsianCrush|Midnight Pulp|CONtv|Fakku|Bilibili|Disney Plus|Bilibili TV|Tencent Video|iQ|Youku|WeTV|Niconico Video|Rooster Teeth|iQIYI|Star+" default="Crunchyroll" visible="eq(-1,true)"/>
@@ -96,8 +96,8 @@
 		<setting type="lsep" label="40313" />
 		<setting type="sep"/>
 		<setting id="general.kodi_language" type="bool" label="40495" default="false" />
-		<setting id="general.audio" type="enum" label="40314" default="40315" lvalues="40315|40316" enable="eq(-1,false)" />
-		<setting id="general.subtitles" type="enum" label="40435" default="40436" lvalues="40507|40436|40437|40438|40439|40440|40441|40442|40443|40444|40445|40446|40447|40448|40449|40450|40451|40452|40453|40454" enable="eq(-2,false)" />
+		<setting id="general.audio" type="enum" label="40314" default="0" lvalues="40315|40316" enable="eq(-1,false)" />
+		<setting id="general.subtitles" type="enum" label="40435" default="1" lvalues="40507|40436|40437|40438|40439|40440|40441|40442|40443|40444|40445|40446|40447|40448|40449|40450|40451|40452|40453|40454" enable="eq(-2,false)" />
 		<setting id="general.source" type="labelenum" label="40330" default="Sub" values="Sub|Dub|Both" />
 		<setting id="general.sourcesort" type="labelenum" label="40333" default="Random" values="Random|Sub|Dub" visible="eq(-1,Both)" />
 		<setting id="general.playlist_length" type="slider" label="40459" default="30" range="10,5,50" option="int" />
